Fixed contact on iphone

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,7 +5,6 @@ $breakpoint-iphone6-7-8: 767px;
   padding-top: 50px;
   display: flex;
   width: 100%;
-  max-height: 100vh;
   flex-direction: column;
   .title {
     padding-left: 58px;
@@ -16,8 +15,24 @@ $breakpoint-iphone6-7-8: 767px;
       width: 95%;
     }
     @media (max-width: $breakpoint-iphone6-7-8) {
-      width: 89%;
+      // width: 100%;
+      padding-left: 50px;
     }
+  }
+}
+
+.emailConfirmation {
+  font-size: 22px;
+  padding-left: 58px;
+  padding-bottom: 0px;
+  display: flex;
+  width: 87%;
+  @media (max-width: $breakpoint-ipad) {
+    width: 95%;
+  }
+  @media (max-width: $breakpoint-iphone6-7-8) {
+    width: 89%;
+    font-size: 16px;
   }
 }
 
@@ -49,17 +64,13 @@ $breakpoint-iphone6-7-8: 767px;
   flex-direction: column;
   justify-content: center;
   padding: 30px 30px;
-  // padding-left: 15%;
-
   @media (max-width: $breakpoint-ipad) {
     width: 100%;
     padding-left: 30px;
     align-items: center;
-    // justify-content: center;
   }
   @media (max-width: $breakpoint-iphone6-7-8) {
     width: 100%;
-    padding-left: 30px;
   }
 }
 
@@ -111,13 +122,6 @@ $breakpoint-iphone6-7-8: 767px;
   }
   @media (max-width: $breakpoint-iphone6-7-8) {
     width: 100%;
-  }
-}
-
-.emailConfirmation {
-  font-size: 22px;
-  @media (max-width: $breakpoint-iphone6-7-8) {
-    font-size: 16px;
   }
 }
 
